--- a/Task1/about.html
+++ b/Task1/about.html
@@ -11,13 +11,13 @@
         <div>
             <h1>Mighty Ducks Hockey League</h1>
             <nav>
-                <a href="/Task1/index.html">Home</a>
+                <a href="/MindHubFE03-TT/Task1/index.html">Home</a>
                 <a href="#">About MDHL</a>
-                <a href="/Task1/contact.html">Contact</a>
+                <a href="/MindHubFE03-TT/Task1/contact.html">Contact</a>
             </nav>
         </div>
         <figure>
-            <img src="/Task1/img/LogoMightyducks01.png" alt="logo" width="100" height="100">
+            <img src="img/LogoMightyducks01.png" alt="logo" width="100" height="100">
         </figure>
     </header>
     <main>
@@ -43,7 +43,7 @@
             </article>
         </div>
         <figure>
-            <img src="/Task1/img/hockey2.jpg" alt="hockey2" width="350" height="350">
+            <img src="/MindHubFE03-TT/Task1/img/hockey2.jpg" alt="hockey2" width="350" height="350">
         </figure>
     </main>
 </body>
