--- a/Task1/contact.html
+++ b/Task1/contact.html
@@ -11,13 +11,13 @@
         <div>
             <h1>Mighty Ducks Hockey League</h1>
             <nav>
-                <a href="/Task1/index.html">Home</a>
-                <a href="/Task1/about.html">About MDHL</a>
+                <a href="/MindHubFE03-TT/Task1/index.html">Home</a>
+                <a href="/MindHubFE03-TT/Task1/about.html">About MDHL</a>
                 <a href="#">Contact</a>
             </nav>
         </div>
         <figure>
-            <img src="/Task1/img/LogoMightyducks01.png" alt="logo" width="100" height="100">
+            <img src="/MindHubFE03-TT/Task1/img/LogoMightyducks01.png" alt="logo" width="100" height="100">
         </figure>
     </header>
     <main>
@@ -26,7 +26,7 @@
             <p>We reply to your email as soon as we can</p>
         </div>
         <figure>
-            <img src="/Task1/img/hockey3.jpg" alt="hockey3" width="350" height="350">
+            <img src="/MindHubFE03-TT/Task1/img/hockey3.jpg" alt="hockey3" width="350" height="350">
         </figure>
     </main>
 </body>
