Modified semantic tags articles and sections

--- a/Task1/index.html
+++ b/Task1/index.html
@@ -21,9 +21,8 @@
         </figure>
     </header>
     <main>
-        <div>
+        <section>
             <h2>Upcoming Events</h2>
-
             <article>
                 <h3>August 4</h3>
                 <p>MDSL Fundraiser</p>
@@ -36,7 +35,7 @@
                 <h3>September 1</h3>
                 <p>First Game of the Season (Check Game Schedule for details)</p>
             </article>
-        </div>
+        </section>
         <figure>
             <img src="/MindHubFE03-TT/Task1/img/hockey1.jpg" alt="hockey1" width="350" height="350">
         </figure>
