--- a/Task1/contact.html
+++ b/Task1/contact.html
@@ -22,10 +22,10 @@
         </figure>
     </header>
     <main>
-        <div>
+        <article>
             <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>.</p>
             <p>We reply to your email as soon as we can</p>
-        </div>
+        </article>
         <figure>
             <img src="/MindHubFE03-TT/Task1/img/hockey3.jpg" alt="hockey3" width="350" height="350">
         </figure>
