Fixed links and img and Asset folder implementation

--- a/Task1/index.html
+++ b/Task1/index.html
@@ -12,12 +12,12 @@
             <h1>Mighty Ducks Hockey League</h1>
             <nav>
                 <a href="#">Home</a>
-                <a href="/MindHubFE03-TT/Task1/about.html">About MDHL</a>
-                <a href="/MindHubFE03-TT/Task1/contact.html">Contact</a>
+                <a href="/Task1/about.html">About MDHL</a>
+                <a href="/Task1/contact.html">Contact</a>
             </nav>
         </div>
         <figure>
-            <img src="/MindHubFE03-TT/Task1/img/LogoMightyducks01.png" alt="logo" width="100" height="100">
+            <img src="/Task1/assets/LogoMightyducks01.png" alt="logo" width="100" height="100">
         </figure>
     </header>
     <main>
@@ -37,7 +37,7 @@
             </article>
         </section>
         <figure>
-            <img src="/MindHubFE03-TT/Task1/img/hockey1.jpg" alt="hockey1" width="350" height="350">
+            <img src="/Task1/assets/hockey1.jpg" alt="hockey1" width="350" height="350">
         </figure>
     </main>
 </body>
