--- a/Task1/about.html
+++ b/Task1/about.html
@@ -5,37 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDHL</title>
+
+    <link rel="stylesheet" href="/Task1/styles/style1.css">
+    <!--<link rel="stylesheet" href="/Task1/styles/style2.css">-->
+    <!--<link rel="stylesheet" href="/Task1/styles/style3.css">-->
+
 </head>
 <body>
     <header>
-        <div>
+        <div class="first-title">
             <h1>Mighty Ducks Hockey League</h1>
-            <nav>
-                <a href="/Task1/index.html">Home</a>
-                <a href="#">About MDHL</a>
-                <a href="/Task1/contact.html">Contact</a>
-            </nav>
         </div>
+
+        <ul class="nav">
+            <li class="boton-home" ><a href="/Task1/index.html">Home</a></li>
+            <li class="boton-about" ><a href="#">About MDHL</a></li>
+            <li class="boton-contact" ><a href="/Task1/contact.html">Contact</a></li>
+        </ul>
+
         <figure>
-            <img src="/Task1/assets/LogoMightyducks01.png" alt="logo" width="100" height="100">
+            <img class="portada" src="/Task1/assets/design1_image2.jpg" alt="designimage2">
         </figure>
+
+        <figure>
+            <img class="logo" src="/Task1/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
+        </figure>
+
     </header>
     <main>
-        <div>
-            <section>
-                <h3>Mision</h3>
-                <p>To support young athletes living Chicago's northside neighborhood, who have an interest in 
+        <div class="second-title">
+            <h2 class="second-title-h2"> About MDHL </h2>
+        </div>
+
+        <div class="articles2">
+            <section class="article-box" >
+                <h3 class="article-h3" >Mision</h3>
+                <p class="article-p" >To support young athletes living Chicago's northside neighborhood, who have an interest in 
                     learning and playing soccer, with opportunities to learn and practice skills related to the game of 
                     hockey, specifically those skills around team cooperation and good sportsmanship</p>
             </section>
-            <section>
-                <h3>Vision</h3>
-                <p>The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
+            <section class="article-box" >
+                <h3 class="article-h3" >Vision</h3>
+                <p class="article-p" >The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
                     through the building of character, self-discipline, and leadership.</p>
             </section>
-            <section>
-                <h3>General Information</h3>
-                <p>The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
+            <section class="article-box" >
+                <h3 class="article-h3" >General Information</h3>
+                <p class="article-p" >The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
                     Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
                     member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
                     neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
@@ -43,7 +59,7 @@
             </section>
         </div>
         <figure>
-            <img src="/Task1/assets/hockey2.jpg" alt="hockey2" width="350" height="350">
+            <img class="img-hockey" src="/Task1/assets/hockey2.jpg" alt="hockey2" width="350" height="350">
         </figure>
     </main>
 </body>
