--- a/Task1/contact.html
+++ b/Task1/contact.html
@@ -5,29 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDHL</title>
+
+    <link rel="stylesheet" href="/Task1/styles/style1.css">
+    <!--<link rel="stylesheet" href="/Task1/styles/style2.css">-->
+    <!--<link rel="stylesheet" href="/Task1/styles/style3.css">-->
     
 </head>
 <body>
     <header>
-        <div>
+        <div class="first-title">
             <h1>Mighty Ducks Hockey League</h1>
-            <nav>
-                <a href="/Task1/index.html">Home</a>
-                <a href="/Task1/about.html">About MDHL</a>
-                <a href="#">Contact</a>
-            </nav>
         </div>
+
+        <ul class="nav">
+            <li class="boton-home" ><a href="/Task1/index.html">Home</a></li>
+            <li class="boton-about" ><a href="/Task1/about.html">About MDHL</a></li>
+            <li class="boton-contact" ><a href="#">Contact</a></li>
+        </ul>
+
         <figure>
-            <img src="/Task1/assets/LogoMightyducks01.png" alt="logo" width="100" height="100">
+            <img class="portada" src="/Task1/assets/design1_image2.jpg" alt="designimage2">
         </figure>
+
+        <figure>
+            <img class="logo" src="/Task1/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
+        </figure>
+
     </header>
     <main>
-        <article>
-            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>.</p>
-            <p>We reply to your email as soon as we can</p>
+        <div class="second-title" >
+            <h2 class="second-title-h2">Contact</h2>
+        </div>
+
+        <article class="articles3">
+            <p class="article-p2">Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><br><br>We reply to your email as soon as we can</p>
         </article>
         <figure>
-            <img src="/Task1/assets/hockey3.jpg" alt="hockey3" width="350" height="350">
+            <img class="img-hockey" src="/Task1/assets/hockey3.jpg" alt="hockey3" width="350" height="350">
         </figure>
     </main>
 </body>
