--- a/Task/about.html
+++ b/Task/about.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDHL</title>
 
-    <link rel="stylesheet" href="/Task1/styles/style1.css">
-    <!--<link rel="stylesheet" href="/Task1/styles/style2.css">-->
-    <!--<link rel="stylesheet" href="/Task1/styles/style3.css">-->
-
+    <link rel="stylesheet" href="/Task/styles/style1.css">
+    <!--<link rel="stylesheet" href="/Task/styles/style2.css">-->
+    <!--<link rel="stylesheet" href="/Task/styles/style3.css">-->
 </head>
 <body>
     <header>
@@ -18,17 +17,17 @@
         </div>
 
         <ul class="nav">
-            <li class="boton-home" ><a href="/Task1/index.html">Home</a></li>
+            <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
             <li class="boton-about" ><a href="#">About MDHL</a></li>
-            <li class="boton-contact" ><a href="/Task1/contact.html">Contact</a></li>
+            <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
         </ul>
 
         <figure>
-            <img class="portada" src="/Task1/assets/design1_image2.jpg" alt="designimage2">
+            <img class="portada" src="/Task/assets/design1_image2.jpg" alt="designimage2">
         </figure>
 
         <figure>
-            <img class="logo" src="/Task1/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
+            <img class="logo" src="/Task/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
         </figure>
 
     </header>
@@ -59,7 +58,7 @@
             </section>
         </div>
         <figure>
-            <img class="img-hockey" src="/Task1/assets/hockey2.jpg" alt="hockey2" width="350" height="350">
+            <img class="img-hockey" src="/Task/assets/hockey2.jpg" alt="hockey2" width="350" height="350">
         </figure>
     </main>
 </body>
