--- a/Task/index.html
+++ b/Task/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MDHL</title>
     
-    <link rel="stylesheet" href="/Task1/styles/style1.css">
-    <!--<link rel="stylesheet" href="/Task1/styles/style2.css">-->
-    <!--<link rel="stylesheet" href="/Task1/styles/style3.css">-->
+    <link rel="stylesheet" href="/Task/styles/style1.css">
+    <!--<link rel="stylesheet" href="/Task/styles/style2.css">-->
+    <!--<link rel="stylesheet" href="/Task/styles/style3.css">-->
 
 </head>
 <body>
@@ -19,16 +19,16 @@
         
         <ul class="nav">
             <li class="boton-home" ><a href="#">Home</a></li>
-            <li class="boton-about" ><a href="/Task1/about.html">About MDHL</a></li>
-            <li class="boton-contact" ><a href="/Task1/contact.html">Contact</a></li>
+            <li class="boton-about" ><a href="/Task/about.html">About MDHL</a></li>
+            <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
         </ul>
 
         <figure>
-            <img class="portada" src="/Task1/assets/design1_image2.jpg" alt="designimage2">
+            <img class="portada" src="/Task/assets/design1_image2.jpg" alt="designimage2">
         </figure>
 
         <figure>
-            <img class="logo" src="/Task1/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
+            <img class="logo" src="/Task/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
         </figure>
 
     </header>
@@ -59,7 +59,7 @@
         </section>
 
         <figure>
-            <img class="img-hockey" src="/Task1/assets/hockey1.jpg" alt="hockey1" width="350" height="350">
+            <img class="img-hockey" src="/Task/assets/hockey1.jpg" alt="hockey1" width="350" height="350">
         </figure>
 
     </main>
