UPDATE new html files

--- a/Task/gameInformation.html
+++ b/Task/gameInformation.html
@@ -12,7 +12,6 @@
     <!--<link rel="stylesheet" href="/Task/styles/style1.css">-->
     <!--<link rel="stylesheet" href="/Task/styles/style2.css">-->
     <link rel="stylesheet" href="/Task/styles/style3.css">
-    
 </head>
 <body>
     <header>
@@ -23,9 +22,9 @@
         <ul class="nav">
             <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
             <li class="boton-about" ><a href="/Task/about.html">About MDHL</a></li>
-            <li class="boton-contact" ><a href="#">Contact</a></li>
+            <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
             <li class="boton-rules"><a href="/Task/rules.html">Rules</a></li>
-            <li class="boton-gamei"><a href="/Task/gameInformation.html">Game Information</a></li>
+            <li class="boton-gamei"><a href="#">Game Information</a></li>
         </ul>
 
         <figure>
@@ -37,17 +36,7 @@
         </figure>
 
     </header>
-    <main>
-        <div class="second-title" >
-            <h2 class="second-title-h2">Contact</h2>
-        </div>
 
-        <article class="articles3">
-            <p class="article-p2">Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><br><br>We reply to your email as soon as we can</p>
-        </article>
-        <figure>
-            <img class="img-hockey" src="/Task/assets/hockey3.jpg" alt="hockey3" width="350" height="350">
-        </figure>
+    <main>
+        
     </main>
-</body>
-</html>
