--- a/Task/about.html
+++ b/Task/about.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDHL</title>
 
-    <link rel="stylesheet" href="/Task/styles/style1.css">
+    <!--Favicon-->
+    <link rel="icon" type="image/jpg" href="/Task/assets/LogoMightyducks01.png">
+
+    <!--<link rel="stylesheet" href="/Task/styles/style1.css">-->
     <!--<link rel="stylesheet" href="/Task/styles/style2.css">-->
-    <!--<link rel="stylesheet" href="/Task/styles/style3.css">-->
+    <link rel="stylesheet" href="/Task/styles/style3.css">
 </head>
 <body>
     <header>
@@ -20,6 +23,8 @@
             <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
             <li class="boton-about" ><a href="#">About MDHL</a></li>
             <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
+            <li class="boton-rules"><a href="/Task/rules.html">Rules</a></li>
+            <li class="boton-gamei"><a href="/Task/gameInformation.html">Game Information</a></li>
         </ul>
 
         <figure>
