--- a/Task/index.html
+++ b/Task/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>MDHL</title>
+
+    <!--Favicon-->
+    <link rel="icon" type="image/jpg" href="/Task/assets/LogoMightyducks01.png">
+
     
-    <link rel="stylesheet" href="/Task/styles/style1.css">
+    <!--<link rel="stylesheet" href="/Task/styles/style1.css">-->
     <!--<link rel="stylesheet" href="/Task/styles/style2.css">-->
-    <!--<link rel="stylesheet" href="/Task/styles/style3.css">-->
+    <link rel="stylesheet" href="/Task/styles/style3.css">
 
 </head>
 <body>
@@ -21,11 +25,15 @@
             <li class="boton-home" ><a href="#">Home</a></li>
             <li class="boton-about" ><a href="/Task/about.html">About MDHL</a></li>
             <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
+            <li class="boton-rules"><a href="/Task/rules.html">Rules</a></li>
+            <li class="boton-gamei"><a href="/Task/gameInformation.html">Game Information</a></li>
         </ul>
 
         <figure>
             <img class="portada" src="/Task/assets/design1_image2.jpg" alt="designimage2">
         </figure>
+        <!--Esta imagen de clase "portada" tiene en los styles display none, porque en uno de los estilos solicitados debia aparcer como banner, luego se utilizo una imagen alternativa como background, quedando-->
+
 
         <figure>
             <img class="logo" src="/Task/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
