--- a/Task/about.html
+++ b/Task/about.html
@@ -11,60 +11,61 @@
 
     <!--<link rel="stylesheet" href="/Task/styles/style1.css">-->
     <!--<link rel="stylesheet" href="/Task/styles/style2.css">-->
-    <link rel="stylesheet" href="/Task/styles/style3.css">
+    <!-- <link rel="stylesheet" href="/Task/styles/style3.css"> -->
+    <link rel="stylesheet" href="/Task/styles/index.css">
 </head>
 <body>
     <header>
-        <div class="first-title">
-            <h1>Mighty Ducks Hockey League</h1>
-        </div>
-
-        <ul class="nav">
-            <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
-            <li class="boton-about" ><a href="#">About MDHL</a></li>
-            <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
-            <li class="boton-rules"><a href="/Task/rules.html">Rules</a></li>
-            <li class="boton-gamei"><a href="/Task/gameInformation.html">Game Information</a></li>
-        </ul>
-
-        <figure>
-            <img class="portada" src="/Task/assets/design1_image2.jpg" alt="designimage2">
-        </figure>
-
         <figure>
             <img class="logo" src="/Task/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
         </figure>
-
+        <div class="first-title">
+            <h1>Mighty Ducks Hockey League</h1>
+        </div>
     </header>
+        <div class="navigation">
+            <ul class="nav">
+                <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
+                <li class="boton-about" ><a href="/Task/about.html">About MDHL</a></li>
+                <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
+                <li class="boton-rules"><a href="/Task/rules.html">Rules</a></li>
+                <li class="boton-gamei"><a href="/Task/gameInformation.html">Game Information</a></li>
+            </ul>
+        </div>
     <main>
-        <div class="second-title">
-            <h2 class="second-title-h2"> About MDHL </h2>
-        </div>
+        <section class="seccion2">
 
-        <div class="articles2">
-            <section class="article-box" >
-                <h3 class="article-h3" >Mision</h3>
-                <p class="article-p" >To support young athletes living Chicago's northside neighborhood, who have an interest in 
-                    learning and playing soccer, with opportunities to learn and practice skills related to the game of 
-                    hockey, specifically those skills around team cooperation and good sportsmanship</p>
-            </section>
-            <section class="article-box" >
-                <h3 class="article-h3" >Vision</h3>
-                <p class="article-p" >The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
-                    through the building of character, self-discipline, and leadership.</p>
-            </section>
-            <section class="article-box" >
-                <h3 class="article-h3" >General Information</h3>
-                <p class="article-p" >The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
-                    Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
-                    member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
-                    neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-                    parents and previous league members</p>
-            </section>
-        </div>
-        <figure>
+            <div class="second-title">
+                <h2 class="second-title-h2"> About MDHL </h2>
+            </div>
+            <div class="articulos2">
+
+                <div class="articles">
+                    <section class="article-box" >
+                        <h3 class="article-h3" >Mision</h3>
+                        <p class="article-p" >To support young athletes living Chicago's northside neighborhood, who have an interest in 
+                            learning and playing soccer, with opportunities to learn and practice skills related to the game of 
+                            hockey, specifically those skills around team cooperation and good sportsmanship</p>
+                        </section>
+                        <section class="article-box" >
+                        <h3 class="article-h3" >Vision</h3>
+                        <p class="article-p" >The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes 
+                            through the building of character, self-discipline, and leadership.</p>
+                        </section>
+                        <section class="article-box" >
+                            <h3 class="article-h3" >General Information</h3>
+                            <p class="article-p" >The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
+                                Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
+                                member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
+                                neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
+                                parents and previous league members</p>
+                            </section>
+                        </div>
+                    </div>
+                    </section>
+        <!-- <figure>
             <img class="img-hockey" src="/Task/assets/hockey2.jpg" alt="hockey2" width="350" height="350">
-        </figure>
+        </figure> -->
     </main>
 </body>
 </html>
