--- a/Task/contact.html
+++ b/Task/contact.html
@@ -11,43 +11,40 @@
 
     <!--<link rel="stylesheet" href="/Task/styles/style1.css">-->
     <!--<link rel="stylesheet" href="/Task/styles/style2.css">-->
-    <link rel="stylesheet" href="/Task/styles/style3.css">
-    
+    <!-- <link rel="stylesheet" href="/Task/styles/style3.css"> -->
+    <link rel="stylesheet" href="/Task/styles/index.css">
 </head>
 <body>
-    <header>
-        <div class="first-title">
-            <h1>Mighty Ducks Hockey League</h1>
-        </div>
-
-        <ul class="nav">
-            <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
-            <li class="boton-about" ><a href="/Task/about.html">About MDHL</a></li>
-            <li class="boton-contact" ><a href="#">Contact</a></li>
-            <li class="boton-rules"><a href="/Task/rules.html">Rules</a></li>
-            <li class="boton-gamei"><a href="/Task/gameInformation.html">Game Information</a></li>
-        </ul>
-
-        <figure>
-            <img class="portada" src="/Task/assets/design1_image2.jpg" alt="designimage2">
-        </figure>
-
+   <header>
         <figure>
             <img class="logo" src="/Task/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
         </figure>
-
+        <div class="first-title">
+            <h1>Mighty Ducks Hockey League</h1>
+        </div>
     </header>
+        <div class="navigation">
+            <ul class="nav">
+                <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
+                <li class="boton-about" ><a href="/Task/about.html">About MDHL</a></li>
+                <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
+                <li class="boton-rules"><a href="/Task/rules.html">Rules</a></li>
+                <li class="boton-gamei"><a href="/Task/gameInformation.html">Game Information</a></li>
+            </ul>
+        </div>
     <main>
         <div class="second-title" >
             <h2 class="second-title-h2">Contact</h2>
         </div>
+        <div class="articulos3">
 
-        <article class="articles3">
-            <p class="article-p2">Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><br><br>We reply to your email as soon as we can</p>
-        </article>
-        <figure>
-            <img class="img-hockey" src="/Task/assets/hockey3.jpg" alt="hockey3" width="350" height="350">
-        </figure>
+            <article class="articles3">
+                <p class="article-p2">Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><br><br>We reply to your email as soon as we can</p>
+            </article>
+            <!-- <figure>
+                <img class="img-hockey" src="/Task/assets/hockey3.jpg" alt="hockey3" width="350" height="350">
+            </figure> -->
+        </div>
     </main>
 </body>
 </html>
