--- a/Task/gameInformation.html
+++ b/Task/gameInformation.html
@@ -11,32 +11,124 @@
 
     <!--<link rel="stylesheet" href="/Task/styles/style1.css">-->
     <!--<link rel="stylesheet" href="/Task/styles/style2.css">-->
-    <link rel="stylesheet" href="/Task/styles/style3.css">
+    <!-- <link rel="stylesheet" href="/Task/styles/style3.css"> -->
+    <link rel="stylesheet" href="/Task/styles/index.css">
 </head>
 <body>
     <header>
-        <div class="first-title">
-            <h1>Mighty Ducks Hockey League</h1>
-        </div>
-
-        <ul class="nav">
-            <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
-            <li class="boton-about" ><a href="/Task/about.html">About MDHL</a></li>
-            <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
-            <li class="boton-rules"><a href="/Task/rules.html">Rules</a></li>
-            <li class="boton-gamei"><a href="#">Game Information</a></li>
-        </ul>
-
-        <figure>
-            <img class="portada" src="/Task/assets/design1_image2.jpg" alt="designimage2">
-        </figure>
-
         <figure>
             <img class="logo" src="/Task/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
         </figure>
-
+        <div class="first-title">
+            <h1>Mighty Ducks Hockey League</h1>
+        </div>
     </header>
+        <div class="navigation">
+            <ul class="nav">
+                <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
+                <li class="boton-about" ><a href="/Task/about.html">About MDHL</a></li>
+                <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
+                <li class="boton-rules"><a href="/Task/rules.html">Rules</a></li>
+                <li class="boton-gamei"><a href="/Task/gameInformation.html">Game Information</a></li>
+            </ul>
+        </div>
 
     <main>
-        
+        <h1>Mighty Ducks Hockey League</h1>
+        <h2>Fall Schedule</h2>
+        <h2>*All games take place on Saturday.</h2>
+
+        <table>
+            <thead>
+                <tr>
+                <th>SEPTEMBER</th>
+                <th>Teams</th>
+                <th>Location</th>
+                <th>Times</th>
+                </tr>
+           </thead>
+
+           <tbody>
+               <tr>
+                   <th rowspan="2">9/01</th>
+                   <th>U1 and U4</th>
+                   <th>AJ Katzenmaier</th>
+                   <th>9:30 a.m.</th>
+               </tr>
+               <tr>
+                   <th>U3 and U2</th>
+                   <th>Greenbay</th>
+                   <th>1:00 p.m.</th>
+               </tr>
+
+
+               <tr>
+                    <th rowspan="2">9/08</th>
+                    <th>U5 and U6</th>
+                    <th>Howard A Yeager</th>
+                    <th>9:30 a.m.</th>
+               </tr>
+
+               <tr>
+                    <th>U6 and U1</th>
+                    <th>Marjorie P Hart</th>
+                    <th>1:00 p.m.</th>
+               </tr>
+
+
+               <tr>
+                    <th rowspan="2">9/15</th>
+                    <th>U2 and U4</th>
+                    <th>North</th>
+                    <th>9:30 a.m.</th>
+               </tr>
+
+               <tr>
+                    <th>U3 and U5</th>
+                    <th>AJ Katzenmaier</th>
+                    <th>1:00 p.m.</th>
+               </tr>
+
+
+               <tr>
+                    <th rowspan="2">9/22</th>
+                    <th>U1 and U3</th>
+                    <th>South</th>
+                    <th>9:30 a.m.</th>
+               </tr>
+
+               <tr>
+                    <th>U2 and U6</th>
+                    <th>Howard A Yeager</th>
+                    <th>1:00 p.m.</th>
+               </tr>
+
+
+               <tr>
+                    <th>9/29</th>
+                    <th>U4 and U5</th>
+                    <th>Greenbay</th>
+                    <th>9:30 a.m.</th>
+               </tr>
+           </tbody>
+
+        </table>
+
+           <div>
+               <p><b>Facility Type:</b> Outdoor</p>
+           </div>
+
+           <div>
+               <p><b>Additional information:</b> If deemed necessary by MDHL games may be shortened or cancelled due to extreme weather conditions.</p>
+           </div>
+
+           <div>
+               <p><b>Please direct all questions to:</b> Michael Randall, League Coordinator</p>
+           </div>
+
+           <div>
+               <p><b>Phone:</b>(630)690-8132</p>
+               <p><b>Email:</b>michael.randall@chihockey.org</p>
+           </div>
+
     </main>
