--- a/Task/rules.html
+++ b/Task/rules.html
@@ -12,30 +12,26 @@
     <!--<link rel="stylesheet" href="/Task/styles/style1.css">-->
     <!--<link rel="stylesheet" href="/Task/styles/style2.css">-->
     <!--<link rel="stylesheet" href="/Task/styles/style3.css">-->
+    <link rel="stylesheet" href="/Task/styles/index.css">
 </head>
 <body>
     <header>
-        <div class="first-title">
-            <h1>Mighty Ducks Hockey League</h1>
-        </div>
-
-        <ul class="nav">
-            <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
-            <li class="boton-about" ><a href="/Task/about.html">About MDHL</a></li>
-            <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
-            <li class="boton-rules"><a href="#">Rules</a></li>
-            <li class="boton-gamei"><a href="/Task/gameInformation.html">Game Information</a></li>
-        </ul>
-    
-        <figure>
-            <img class="portada" src="/Task/assets/design1_image2.jpg" alt="designimage2">
-        </figure>
-
         <figure>
             <img class="logo" src="/Task/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
         </figure>
-
+        <div class="first-title">
+            <h1>Mighty Ducks Hockey League</h1>
+        </div>
     </header>
+        <div class="navigation">
+            <ul class="nav">
+                <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
+                <li class="boton-about" ><a href="/Task/about.html">About MDHL</a></li>
+                <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
+                <li class="boton-rules"><a href="/Task/rules.html">Rules</a></li>
+                <li class="boton-gamei"><a href="/Task/gameInformation.html">Game Information</a></li>
+            </ul>
+        </div>
 
     <main>
         <section>
