--- a/Task/rules.html
+++ b/Task/rules.html
@@ -33,7 +33,7 @@
             </ul>
         </div>
 
-    <main>
+    <main class="main-rules">
         <section>
             <h2>Mighty Ducks Hockey League</h2>
             <h2>RULES OF PLAY & POLICIES</h2>
@@ -53,21 +53,21 @@
             </dl>
         </section>
 
-        <section>
+        <section class="">
             <dl>
             <dt>IHF FIELD REGULATIONS</dt>
 
             <dd>
                 <ol type="1">
                 <li>
-                    <p>DIMENSIONS.IHF Law 1 provides for flexible external field dimensions within
+                    <p><span>DIMENSIONS.IHF</span> Law 1 provides for flexible external field dimensions within
                         a given maximum and minimum width and length. These dimensions should be
                         adhered to for all fields used by teams under 12 and older.
                     </p>
                 </li>
 
                 <li>
-                    <p>COMPETITION FIELDS. Fields used within the competition program must be
+                    <p><span>COMPETITION FIELDS.</span> Fields used within the competition program must be
                         a minimum of 100 x 60 yards.Leagues, districts or associations participating in
                         the state competition program that are unable to provide a field that meets these
                         minimum requirements must advise the State Competition Board which will
@@ -78,8 +78,10 @@
                     </p>
                 </li>
 
-                <li>
+                <li><span>
                     FIELDS USED BY YOUNG AGE GROUPS
+                </span>
+
                     <ol type="a">
                     <li>U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
                         for older age groups should be progressively larger.</li>
