--- a/Task/contact.html
+++ b/Task/contact.html
@@ -33,18 +33,21 @@
             </ul>
         </div>
     <main>
-        <div class="second-title" >
-            <h2 class="second-title-h2">Contact</h2>
-        </div>
-        <div class="articulos3">
+        <section class="seccion3">
 
-            <article class="articles3">
-                <p class="article-p2">Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><br><br>We reply to your email as soon as we can</p>
-            </article>
-            <!-- <figure>
-                <img class="img-hockey" src="/Task/assets/hockey3.jpg" alt="hockey3" width="350" height="350">
-            </figure> -->
-        </div>
+            <div class="second-title" >
+                <h2 class="second-title-h2">Contact</h2>
+            </div>
+            <div class="articulos3">
+                
+                <article class="articles3">
+                    <p class="article-p2">Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a><br><br>We'll reply to your email as soon as we can</p>
+                </article>
+                <!-- <figure>
+                    <img class="img-hockey" src="/Task/assets/hockey3.jpg" alt="hockey3" width="350" height="350">
+                </figure> -->
+            </div>
+        </section>
     </main>
 </body>
 </html>
