--- a/Task/gameInformation.html
+++ b/Task/gameInformation.html
@@ -7,17 +7,17 @@
     <title>MDHL</title>
 
     <!--Favicon-->
-    <link rel="icon" type="image/jpg" href="/Task/assets/LogoMightyducks01.png">
+    <link rel="icon" type="image/jpg" href="../assets/favicon.ico">
 
     <!--<link rel="stylesheet" href="/Task/styles/style1.css">-->
     <!--<link rel="stylesheet" href="/Task/styles/style2.css">-->
     <!-- <link rel="stylesheet" href="/Task/styles/style3.css"> -->
-    <link rel="stylesheet" href="/Task/styles/index.css">
+    <link rel="stylesheet" href="../styles/index.css">
 </head>
 <body>
     <header>
         <figure>
-            <img class="logo" src="/Task/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
+            <img class="logo" src="../assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
         </figure>
         <div class="first-title">
             <h1>Mighty Ducks Hockey League</h1>
@@ -25,11 +25,12 @@
     </header>
         <div class="navigation">
             <ul class="nav">
-                <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
-                <li class="boton-about" ><a href="/Task/about.html">About MDHL</a></li>
-                <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
-                <li class="boton-rules"><a href="/Task/rules.html">Rules</a></li>
-                <li class="boton-gamei"><a href="/Task/gameInformation.html">Game Information</a></li>
+                <li class="boton-home" ><a href="../index.html">Home</a></li>
+                <li class="boton-about"><a href="../about.html">About MDHL</a></li>
+                <li class="boton-rules"><a href="../rules.html">Rules</a></li>
+                <li class="boton-gamei"><a href="#">Game Information</a></li>
+                <li class="boton-registration"><a href="../registration.html">Registration</a></li>
+                <li class="boton-contact"><a href="../contact.html">Contact</a></li>
             </ul>
         </div>
 
@@ -45,6 +46,7 @@
                 <th>Teams</th>
                 <th>Location</th>
                 <th>Times</th>
+                <th>Map</th>
                 </tr>
            </thead>
 
@@ -54,11 +56,19 @@
                    <th class="teams" >U1 and U4</th>
                    <th class="location">AJ Katzenmaier</th>
                    <th class="time" >9:30 a.m.</th>
+                   <th class="map"><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11799.122572613156!2d-87.8628046!3d42.3258772!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1675835106709!5m2!1ses-419!2sar"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                </tr>
                <tr>
                    <th class="teams" >U3 and U2</th>
                    <th class="location">Greenbay</th>
                    <th class="time" >1:00 p.m.</th>
+                   <th class="map"><iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2845.0065568794753!2d-88.023051!3d44.51501909999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8802fab86c437363%3A0xb672a04eb1b65dc5!2sGreen%20Bay%20Area%20Public%20Schools!5e0!3m2!1ses-419!2sar!4v1675835898306!5m2!1ses-419!2sar"
+                    width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                </tr>
 
 
@@ -67,12 +77,20 @@
                     <th class="teams" >U5 and U6</th>
                     <th class="location">Howard A Yeager</th>
                     <th class="time" >9:30 a.m.</th>
+                    <th class="map"><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2700626313867!2d-87.85606978427579!3d42.315438279189905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675835713241!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                </tr>
 
                <tr>
                     <th class="teams" >U6 and U1</th>
                     <th class="location">Marjorie P Hart</th>
                     <th class="time" >1:00 p.m.</th>
+                    <th class="map"><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.2898383819593!2d-87.6459727!3d41.9296229!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses-419!2sar!4v1675836087695!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                </tr>
 
 
@@ -81,12 +99,20 @@
                     <th class="teams" >U2 and U4</th>
                     <th class="location">North</th>
                     <th class="time" >9:30 a.m.</th>
+                    <th class="map"><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.335547737115!2d-87.6461229!3d41.90714489999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd33af14860a5%3A0x5736e62f19086c62!2sNorth%20Elementary!5e0!3m2!1ses-419!2sar!4v1675836044893!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                </tr>
 
                <tr>
                     <th class="teams" >U3 and U5</th>
                     <th class="location">AJ Katzenmaier</th>
                     <th class="time" >1:00 p.m.</th>
+                    <th class="map"><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2949.780643153289!2d-87.86280459999999!3d42.3258772!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f932fbc6ba7cd%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1675836120624!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                </tr>
 
 
@@ -95,12 +121,20 @@
                     <th class="teams" >U1 and U3</th>
                     <th class="location">South</th>
                     <th class="time" >9:30 a.m.</th>
+                    <th class="map"><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2964.0706345378885!2d-87.8860448!3d42.0202171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fb7ad3c474b63%3A0x93bdf85af2a839ed!2sSOUTH%20ELEMENTARY%20SCHOOL!5e0!3m2!1ses-419!2sar!4v1675836153448!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                </tr>
 
                <tr>
                     <th class="teams" >U2 and U6</th>
                     <th class="location">Howard A Yeager</th>
                     <th class="time" >1:00 p.m.</th>
+                    <th class="map"><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2700626313867!2d-87.85606978427579!3d42.315438279189905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675835713241!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                </tr>
 
 
@@ -109,6 +143,10 @@
                     <th class="teams" >U4 and U5</th>
                     <th class="location">Greenbay</th>
                     <th class="time" >9:30 a.m.</th>
+                    <th class="map"><iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2845.0065568794753!2d-88.023051!3d44.51501909999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8802fab86c437363%3A0xb672a04eb1b65dc5!2sGreen%20Bay%20Area%20Public%20Schools!5e0!3m2!1ses-419!2sar!4v1675835898306!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        referrerpolicy="no-referrer-when-downgrade"></iframe></th>
                </tr>
            </tbody>
 
