--- a/Task/rules.html
+++ b/Task/rules.html
@@ -7,17 +7,17 @@
     <title>MDHL</title>
 
     <!--Favicon-->
-    <link rel="icon" type="image/jpg" href="/Task/assets/LogoMightyducks01.png">
+    <link rel="icon" type="image/jpg" href="/assets/favicon.ico">
 
     <!--<link rel="stylesheet" href="/Task/styles/style1.css">-->
     <!--<link rel="stylesheet" href="/Task/styles/style2.css">-->
     <!--<link rel="stylesheet" href="/Task/styles/style3.css">-->
-    <link rel="stylesheet" href="/Task/styles/index.css">
+    <link rel="stylesheet" href="../styles/index.css"">
 </head>
 <body>
     <header>
         <figure>
-            <img class="logo" src="/Task/assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
+            <img class="logo" src="../assets/LogoMightyducks01.png" alt="logo" width="130" height="130">
         </figure>
         <div class="first-title">
             <h1>Mighty Ducks Hockey League</h1>
@@ -25,11 +25,12 @@
     </header>
         <div class="navigation">
             <ul class="nav">
-                <li class="boton-home" ><a href="/Task/index.html">Home</a></li>
-                <li class="boton-about" ><a href="/Task/about.html">About MDHL</a></li>
-                <li class="boton-contact" ><a href="/Task/contact.html">Contact</a></li>
-                <li class="boton-rules"><a href="/Task/rules.html">Rules</a></li>
-                <li class="boton-gamei"><a href="/Task/gameInformation.html">Game Information</a></li>
+                <li class="boton-home" ><a href="../index.html">Home</a></li>
+                <li class="boton-about"><a href="../about.html">About MDHL</a></li>
+                <li class="boton-rules"><a href="#">Rules</a></li>
+                <li class="boton-gamei"><a href="../gameInformation.html">Game Information</a></li>
+                <li class="boton-registration"><a href="../registration.html">Registration</a></li>
+                <li class="boton-contact"><a href="../contact.html">Contact</a></li>
             </ul>
         </div>
 
