--- a/TaskJS/pastEvents.html
+++ b/TaskJS/pastEvents.html
@@ -87,7 +87,7 @@
                     <div class="carousel-item active" data-bs-interval="10000">
                         <img src="./assets/img/basnner.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Home</h5>
+                            <h5>Past Events</h5>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
@@ -99,7 +99,7 @@
                     <div class="carousel-item">
                         <img src="./assets/img/basnner.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Previous Events</h5>
+                            <h5>Home</h5>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -169,10 +169,10 @@
                         </nav>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
+                <div class="row" id="cardContainer">
+                    <!-- <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="/TaskJS/assets/img/325456780_503203791925507_4477137402174597830_n.jpg"
+                            <img src="./assets/img/325456780_503203791925507_4477137402174597830_n.jpg"
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="/TaskJS/assets/img/326356615_516802213681023_8081247932819803825_n.jpg"
+                            <img src="./assets/img/326356615_516802213681023_8081247932819803825_n.jpg"
                                 class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
@@ -208,7 +208,7 @@
                     </div>
                     <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="/TaskJS/assets/img/cauquen2-1024x683.jpg" class="card-img-top" alt="...">
+                            <img src="./assets/img/cauquen2-1024x683.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -225,7 +225,7 @@
                     </div>
                     <div class="col">
                         <div class="card" style="width: 18rem;">
-                            <img src="/TaskJS/assets/img/cauquenes detalle.jfif" class="card-img-top" alt="...">
+                            <img src="./assets/img/cauquenes detalle.jfif" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk
@@ -241,7 +241,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </main>
 
@@ -292,6 +292,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
+    <script src="./assets/scripts/data.js"></script>
+    <script src="./assets/scripts/pastEvents.js"></script>
 </body>
 
 </html>
