--- a/TaskJS/index.html
+++ b/TaskJS/index.html
@@ -90,7 +90,7 @@
                 <div class="carousel-item">
                     <img src="./assets/img/basnner.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Previous Events</h5>                        
+                        <h5>Past Events</h5>                        
                     </div>
                 </div>
                 <div class="carousel-item">
@@ -156,11 +156,11 @@
                         </nav>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col cards">
-                        <a class="text-decoration-none text-reset"  href="/TaskJS/details.html">
+                <div class="row" id="cardContainer">
+                    <!-- <div class="col cards">
+                        <a class="text-decoration-none text-reset"  href="./details.html">
                             <div class="card" style="width: 18rem;">
-                                <img src="/TaskJS/assets/img/325456780_503203791925507_4477137402174597830_n.jpg" class="card-img-top" alt="...">
+                                <img src="/assets/img/325456780_503203791925507_4477137402174597830_n.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Card title</h5>
                                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -174,11 +174,24 @@
                                 </div>
                             </a>
                     </div>
-                    
+                    <div class="col cards"> 
+            <a class="text-decoration-none text-reset"  href="./details.html">
+                <div class="card" style = "width: 18rem;">
+                        <img src="${card.image}" class="card-img-top" alt="..."> 
+                        <div class="card-body"><h5 class="card-title">${card.name}</h5 >
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the cards content.</p>
+                                <div class=" card-price-ver-mas row  text-center justify-content-evenly">
+                                    <p class="precio col-5">Price: $10000</p>
+                                    <button type="button" class="btn col-5 btn-outline-primary btn-sm" style="--bs-btn-padding-y: .15rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Ver más</button>
+                                </div>                        
+                        </div >
+                    </div >
+                </a >
+            </div >
                     <div class="col cards">
-                        <a class="text-decoration-none text-reset" href="/TaskJS/details.html">
+                        <a class="text-decoration-none text-reset" href="./details.html">
                         <div class="card" style="width: 18rem;">
-                            <img src="/TaskJS/assets/img/326356615_516802213681023_8081247932819803825_n.jpg" class="card-img-top" alt="...">
+                            <img src="./assets/img/326356615_516802213681023_8081247932819803825_n.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -193,9 +206,9 @@
                     </a>
                     </div>
                     <div class="col cards">
-                        <a class="text-decoration-none text-reset" href="/TaskJS/details.html">
+                        <a class="text-decoration-none text-reset" href="./details.html">
                         <div class="card" style="width: 18rem;">
-                            <img src="/TaskJS/assets/img/cauquen2-1024x683.jpg" class="card-img-top" alt="...">
+                            <img src="./assets/img/cauquen2-1024x683.jpg" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -209,9 +222,9 @@
                         </a>
                     </div>
                     <div class="col cards">
-                        <a class="text-decoration-none text-reset" href="/TaskJS/details.html">
+                        <a class="text-decoration-none text-reset" href="./details.html">
                         <div class="card" style="width: 18rem;">
-                            <img src="/TaskJS/assets/img/cauquenes detalle.jfif" class="card-img-top" alt="...">
+                            <img src="./assets/img/cauquenes detalle.jfif" class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
@@ -224,7 +237,12 @@
                             </div>
                         </div>
                         </a>
-                    </div>
+                    </div> -->
+
+
+
+
+                    
                 </div>
             </div>
         </div>
@@ -276,5 +294,9 @@
         crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
             crossorigin="anonymous"></script>
+
+    <script src="./assets/scripts/data.js"></script>
+    <script src="./assets/scripts/index.js"></script>
+
 </body>
 </html>
