--- a/TaskJS/stats.html
+++ b/TaskJS/stats.html
@@ -87,7 +87,7 @@
                     <div class="carousel-item active" data-bs-interval="10000">
                         <img src="./assets/img/basnner.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Home</h5>
+                            <h5>Stats</h5>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
@@ -99,7 +99,7 @@
                     <div class="carousel-item">
                         <img src="./assets/img/basnner.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Previous Events</h5>
+                            <h5>Past Events</h5>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -111,7 +111,7 @@
                     <div class="carousel-item">
                         <img src="./assets/img/basnner.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Stats</h5>
+                            <h5>Home</h5>
                         </div>
                     </div>
                 </div>
@@ -264,6 +264,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+
+    <script src="./assets/scripts/data.js"></script>
+    <script src="./assets/scripts/stats.js"></script>
 </body>
 
 </html>
