index, past y upcoming consumen los datos de la API

--- a/TaskJS/index.html
+++ b/TaskJS/index.html
@@ -296,6 +296,7 @@
             crossorigin="anonymous"></script>
 
     <script src="./assets/scripts/data.js"></script>
+    <script src="./assets/scripts/funciones.js"></script>
     <script src="./assets/scripts/index.js"></script>
 
 </body>
