--- a/TaskJS/upcomingEvents.html
+++ b/TaskJS/upcomingEvents.html
@@ -297,6 +297,7 @@
         crossorigin="anonymous"></script>
 
     <script src="./assets/scripts/data.js"></script>
+    <script src="./assets/scripts/funciones.js"></script>
     <script src="./assets/scripts/upcomingEvents.js"></script>
 </body>
 
