--- a/TaskJS/pastEvents.html
+++ b/TaskJS/pastEvents.html
@@ -294,6 +294,7 @@
         crossorigin="anonymous"></script>
 
     <script src="./assets/scripts/data.js"></script>
+    <script src="./assets/scripts/funciones.js"></script>
     <script src="./assets/scripts/pastEvents.js"></script>
 </body>
 
